--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2022 Blog CMS. All rights reserved.</p>
+            <p>&copy; 2023 Blog CMS Developed by Akieb-Njasm. All rights reserved.</p>
         </div>
     </footer>
 </body>
