--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,9 @@
                 <p class="post-content">{{ post.content }}</p>
                 <p class="post-author">Posted by: {{ post.author }}</p>
                 <hr>
+                {% if current_user.is_authenticated and current_user.username == post.author %}
+                <a href="{{ url_for('edit_post', post_id=post.id) }}" class="edit-btn">Edit</a>
+                {% endif %}
             </div>
         {% endfor %}
     {% else %}
